# calamine-excel-mcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
calamine_mcp/: __init__.py  cli.py  server.py  workbook.py
